--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: leo_coin
+name: cryptocurrency_signin_signup
 description: A new Flutter application.
 
 # The following line prevents the package from being accidentally published to
